--- a/assets/styles/jambOS.css
+++ b/assets/styles/jambOS.css
@@ -1,44 +1,11 @@
 /* alanbbos.css */
 
 body {
-    background: #909193 url(../images/bg2.jpg) repeat;
-    font-family: Helvetica, Verdana, Arial, sans-serif;
-    font-size: 12pt;
-    font-weight: normal;
-    font-style: normal;
-    color: #fff;
-}
-
-#divMain{
-    background: url(../images/bg.jpg) repeat-x;
-    min-height: 720px;
-}
-
-h1 {
-    color: black;
-    font-size: 24pt;
-    font-weight: normal;
-    font-style: normal;	
-    border-bottom: 1px solid black;
-}
-
-h2 {
-    color: black;
-    font-size: 20pt;
-    font-weight: normal;
-    font-style: normal;
-}
-
-h3 {
-    font-family: Helvetica, Verdana, Arial, sans-serif;
-    font-size: 16pt;
-    font-weight: normal;
-    font-style: normal;	
+    background: #fef5e8 url(../images/seamless-brown-mountains.png) bottom repeat-x;
 }
 
 #display {
     cursor: default;
-    border-radius: 10px;
 }
 
 #display:focus{
@@ -53,10 +20,12 @@ h3 {
     background-color: #DFDBC3;
     overflow-x: hidden;
     overflow-y: auto;
-    border-radius: 10px;
-    box-shadow: inset 0 0 10px #000;
     padding: 10px;
-    border: 1px solid #222;
+    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+    border: 13px solid #ffffff;
+    position: relative;
 }
 
 .normal_button {
@@ -75,23 +44,20 @@ h3 {
 }
 
 textarea{
-    border-radius: 10px;
     padding: 5px; 
     font-size: .9em;
-    box-shadow: inset 0 0 10px #000;
     resize: none;
     font-family: "consolas";
     width: 100%;
-}
-
-textarea:focus{
-    outline: 0;
+    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+    border: 13px solid #ffffff;
+    position: relative;
 }
 
 h1, label{
-    color: rgb(172, 172, 172);
     font-weight: normal;
-    text-shadow: 0 1px 3px #000;
 }
 
 #divUserProgramInput{
