--- a/assets/styles/jambOS.css
+++ b/assets/styles/jambOS.css
@@ -13,7 +13,7 @@ body {
 }
 
 #taskbar {
-    border-radius: 10px 10px 0 0;
+    position: fixed !important;
 }
 #divButtonBar{
     margin: 10px 0;
@@ -25,7 +25,7 @@ body {
     background-color: #DFDBC3;
     overflow-x: hidden;
     overflow-y: auto;
-    padding: 10px;
+    padding: 0 10px;
     box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
     -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
