--- a/assets/styles/jambOS.css
+++ b/assets/styles/jambOS.css
@@ -1,5 +1,3 @@
-/* alanbbos.css */
-
 body {
     background: #fef5e8 url(../images/seamless-brown-mountains.png) bottom repeat-x;
 }
@@ -48,6 +46,7 @@ body {
 }
 
 textarea{
+    background-color: #DFDBC3;
     padding: 5px; 
     font-size: .9em;
     resize: none;
@@ -58,6 +57,11 @@ textarea{
     -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
     border: 13px solid #ffffff;
     position: relative;
+}
+
+#taLog{
+    color: lightgreen;
+    background: rgba(0,0,0,.6);
 }
 
 h1, label{
