--- a/assets/styles/jambOS.css
+++ b/assets/styles/jambOS.css
@@ -46,7 +46,7 @@ body {
 }
 
 textarea{
-    background-color: #DFDBC3;
+    /*background-color: #DFDBC3;*/
     padding: 5px; 
     font-size: .9em;
     resize: none;
