--- a/assets/styles/jambOS.css
+++ b/assets/styles/jambOS.css
@@ -92,6 +92,7 @@ h1, label{
     background-color: #DFDBC3;
     height: 200px;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 #memory .content table{
     width: 100%;
