--- a/assets/styles/jambOS.css
+++ b/assets/styles/jambOS.css
@@ -104,12 +104,18 @@ h1, label{
     border: 1px solid #000;
 }
 
-#cpuStatus, #pcbStatus{
+#registerAnalysis{
     margin-top: 20px;
 }
 
 #cpuStatus .content, #pcbStatus .content{
     background-color: #fff;
+    min-height: 195px;
+}
+
+#pcbStatus .content table tr.active td{
+    background-color: rgba(131, 85, 27, 0.41)!important;
+    font-weight: bold;
 }
 
 .card{
