--- a/assets/styles/jambOS.css
+++ b/assets/styles/jambOS.css
@@ -113,6 +113,10 @@ h1, label{
     min-height: 195px;
 }
 
+#analysisTabs li a{
+    color: #000;
+}
+
 #pcbStatus .content table tr.active td{
     background-color: rgba(131, 85, 27, 0.41)!important;
     font-weight: bold;
